# memoryforever

./: .env  .gitignore  .replit  bot_legacy.py  codex memory 301025 1646.rtf  pyproject.toml  replit.md  replit.nix  requirements.txt  веб версия codex 301025 1644.txt
bot/: app.py  assets.py  assets_catalog.json  config.py  main.py  state.py  utils.py
bot/handlers/: __init__.py  core.py
bot/media/: storage.py
bot/payment/: __init__.py  tochka.py
bot/render/: pipeline.py
bot/web/: app.py
frontend/creatium/: README_creatium.md  memoryforever.css  memoryforever.html  memoryforever.js
legal_logs/: accept.jsonl
orders_logs/: generations.jsonl
quota/: free_hugs_usage.json
scripts/: test_bot_two_scenes.py  test_free_hugs_render.py  test_pipeline_end_to_end.py  test_watermark_render.py  test_web_render.py
